--- a/examples/index.html
+++ b/examples/index.html
@@ -3,13 +3,22 @@
 <head>
     <title>Pinky Canvas Examples</title>
     <meta name="viewport" content="width=device-width">
-    <link href="/app.css" rel="stylesheet">
 </head>
 <body class="desktop-layout" style="margin: 0;">
     <div class="container">
         <canvas id="canvas"></canvas>
     </div>
 
-    <script type="text/javascript" src="http://localhost:8080/js/app.js"></script>
+    <script type="text/javascript" src="/pinky.js"></script>
+    <script type="text/javascript">
+      let { canvas, primitives } = Pinky;
+      let width = window.innerWidth;
+      let height = window.innerHeight;
+      let ctx = canvas.init(document.getElementById('canvas'), { width, height });
+
+      const factory = function (ctx, fn) {
+        return (options) => fn(ctx, options);
+      };
+    </script>
 </body>
 </html>
