--- a/examples/index.html
+++ b/examples/index.html
@@ -12,15 +12,24 @@
 
     <script type="text/javascript" src="/pinky.js"></script>
     <script type="text/javascript">
-        const { innerWidth, innerHeigth, devicePixelRatio } = window;
+        const { innerWidth, innerHeight, devicePixelRatio } = window;
 
         const canvas = document.getElementById('canvas');
-        const stage = Pinky.init(canvas, { 
-            width: innerWidth, 
-            height: innerHeight, 
-            ratio: devicePixelRatio 
-        });
-        stage.circle({ x: innerWidth / 2, y: innerHeight / 2, r: 42 }, { fillStyle: 'white', lineWidth: 1 });
+        setTimeout(function() {
+            const stage = Pinky.init(canvas, { 
+                width: innerWidth,
+                height: innerHeight,
+                ratio: devicePixelRatio 
+            });
+            const position = {
+                x: innerWidth / 2,
+                y: innerHeight / 2,
+                r: 42
+            };
+            const styles = { fillStyle: 'white', lineWidth: 1 };
+            stage.circle(position, styles);
+        }, 10);
+        
     </script>
 </body>
 </html>
