better styles for debugging

--- a/examples/index.html
+++ b/examples/index.html
@@ -26,7 +26,7 @@
                 y: innerHeight / 2,
                 r: 42
             };
-            const styles = { fillStyle: 'white', lineWidth: 1 };
+            const styles = { fillStyle: '#efefef', lineWidth: 5, strokeStyle: 'lime' };
             stage.circle(position, styles);
         }, 10);
         
