--- a/examples/index.html
+++ b/examples/index.html
@@ -12,12 +12,11 @@
 
     <script type="text/javascript" src="/pinky.js"></script>
     <script type="text/javascript">
-      const width = window.innerWidth;
-      const height = window.innerHeight;
-      const canvas = document.getElementById('canvas');
-      const pinky = Pinky.init(canvas, { width, height, ratio: 2 });
+    const { innerWidth: width, innerHeight: height, devicePixelRatio: ratio } = window;
+const canvas = document.getElementById('canvas');
+const pinky = Pinky(canvas, { width, height, ratio });
 
-      window.pinky = pinky;
-    </script>
+pinky.circle({ x: width / 2, y: height / 2, r: 4 }, { fillStyle: 'lime' });
+</script>
 </body>
 </html>
